[project]
name = "prompt-injection-defense-env"
version = "1.0.0"
description = "LLM security environment where agents defend against prompt injection attacks"
authors = [{name = "salazarsnow"}]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2.0.0",
    "openai",
]

[tool.setuptools.packages.find]
where = ["."]